--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 Date 
 Version 1.6.1
 - Fixed bug when sender and recipient alias contained XML special characters like &
-- ...
+- Fixed warning with transaction service and not correctly set parenthesis
 
 Date 2020-03-16
 Version 1.6.0
