--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Date 2020-07-03
+Version 1.6.5
+- Added methods for getting and setting post sendout cleanup (deleting the used contact list and filter)
+- Added method to set sendout optimization (streching sendout, ...)
+
 Date 2020-06-10
 Version 1.6.4
 - Fixed reports namespace in XMLDeserializer.php
