--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2020-08-13
+Version 1.7.1
+- Added client infos to opens and clicks
+
 Date 2020-07-29
 Version 1.7.0
 - Added parameter updated_after for ContactsService getContactsCount and getContacts fot filtering only changed contacts
