--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Date ???
+Version 1.7.2
+- Added getCount method to de\xqueue\maileon\api\client\contacts\Contacts object
+- Added getType to mailing service
+- Added parameter $embedTransactionId to getRecipients, getOpens, and getClicks
+
 Date 2020-08-13
 Version 1.7.1
 - Added client infos to opens and clicks
