--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Date 2021-02-01
+Version 1.7.3
+- Added method to get domain used for a mailing
+- Added methods for adding, deleting and retrieving mailing specific blacklists (Versandsperrlisten) to MailingsService
+- Fixing problem of being not able to set values containing XML special characters in MailingsService #setSender, #setSubject, #setPreviewText, and #setTemplate
+
 Date 2021-01-26
 Version 1.7.2
 - Added getCount method to de\xqueue\maileon\api\client\contacts\Contacts object
