--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2021-04-30
+Version 1.8.0
+- Added methods for managing mailing blacklists
+
 Date 2021-02-01
 Version 1.7.3
 - Added parameter "embedContactHash" to getOpens and getClicks
