--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2021-05-18
+Version 1.8.1
+- Added parameter 'editorVersion' to createMailing to be able to select between a CMS1 and CMS2 mailing
+
 Date 2021-04-30
 Version 1.8.0
 - Added methods for managing mailing blacklists
