--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Date 2021-05-18
-Version 1.8.1
+Version 1.8.2
 - Added parameter 'editorVersion' to createMailing to be able to select between a CMS1 and CMS2 mailing
+
+Date 2021-05-06
+Version 1.8.1
+- Fixing misspelled package name for mailing blacklists
 
 Date 2021-04-30
 Version 1.8.0
