--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@ Date
 Version 
 - Due to more strict validation empty strings are not valid for editorVersion when creating Mails. Removed that parameter if not set from API call.
 
+Date 2021-10-25
+Version 1.8.3
+- Added functions 'getRecipientAlias', 'getTrackingStrategy', 'getSpeedLevel' and 'getPostSendoutCleanupState' to the MailingsService
+
 Date 2021-05-18
 Version 1.8.2
 - Added parameter 'editorVersion' to createMailing to be able to select between a CMS1 and CMS2 mailing
