--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
-Date
-Version 
+Date 2022-01-10
+Version 1.8.5
+- Added CMS2 methods (thank you @ Maileon.hu)
+- Added webhook methods (thank you @ Maileon.hu)
+- Get/Delete transaction by ID (thank you @ Maileon.hu)
+- Added getting blacklist expressions (thank you @ Maileon.hu)
+- Added template template path XML response (thank you @ Maileon.hu)
 - Due to more strict validation empty strings are not valid for editorVersion when creating Mails. Removed that parameter if not set from API call.
 
 Date 2021-11-08
