--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2022-02-23
+Version 1.8.6
+- Added generate_transaction_id to CreateTransactions of TransactionsService
+
 Date 2022-01-10
 Version 1.8.5
 - Added CMS2 methods (thank you @ Maileon.hu)
