--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Data 2022-05-04
+Version 1.8.8
+- Fixed problem when parsing header and body information and server response body contained \r\n\r\n
+
 Data 2022-04-27
 Version 1.8.7
 - Changed annotation of MaileonAPIResult::getStatusCode to the correct data type
