--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Data 2022-06-05
+Version 1.8.9
+- Added DispatchLogic and it's data types
+
 Data 2022-05-04
 Version 1.8.8
 - Fixed problem when parsing header and body information and server response body contained \r\n\r\n
