--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,16 @@
-Data 2022-06-05
+Date 2022-06-06
+Version 1.8.9.2
+- Changed DispatchLogic attribute 'RSSOrderDir' to boolean 'RSSOrderAsc' according to API specs
+
+Date 2022-06-05
 Version 1.8.9
 - Added DispatchLogic and it's data types
 
-Data 2022-05-04
+Date 2022-05-04
 Version 1.8.8
 - Fixed problem when parsing header and body information and server response body contained \r\n\r\n
 
-Data 2022-04-27
+Date 2022-04-27
 Version 1.8.7
 - Changed annotation of MaileonAPIResult::getStatusCode to the correct data type
 
