Added parameter "exclude_anonymous" to getUnsubscriber report

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2022-09-13
+Version 1.9.1
+- Added parameter "exclude_anonymous" to getUnsubscriber report
+
 Date 2022-09-10
 - Updated README to an expected and modern format and to mirror deletions in last version
 
