--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2022-10-11
+Version 1.9.2.3
+- Cast parameter of DOMDocument::createCDATASection to string as passing null to a string parameter is deprecated in PHP 8.1+
+
 Date 2022-10-06
 Version 1.9.2.2
 - Added toXML() functions to several classes
