--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Date 2022-10-25
+Version 1.9.4
+- Cast parameter of trim() to string as passing null to a string parameter is deprecated in PHP 8.1+
+- Contact preferences methods change urlencode to rawurlencode.
+
 Date 2022-10-11
 Version 1.9.3
 - Cast parameter of DOMDocument::createCDATASection to string as passing null to a string parameter is deprecated in PHP 8.1+
