--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Not released, yet
+Version 1.9.5
+- Fixed bug when creating a webhook and no body specification was given
+
 Date 2022-10-25
 Version 1.9.4
 - Cast parameter of trim() to string as passing null to a string parameter is deprecated in PHP 8.1+
