--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-Not released, yet
+Date 2023-02-17
+Version 1.9.5.2
+- Changed variable substitution from ${var} to {$var}
+
 Version 1.9.5
 - Fixed bug when creating a webhook and no body specification was given
 
