--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2023-04-20
+Version 1.9.5.3
+- Fixed a bug in AbstractMaileonService, which could create a faulty query string
+
 Date 2023-02-17
 Version 1.9.5.2
 - Changed variable substitution from ${var} to {$var}
