--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Date 2023-05-11
+Version 1.9.7
+- Added method to update transaction types
+- Added sanitizer method to remove the ID field of attributes of transaction types when updating, as this causes an error
+ 
 Date 2023-04-20
 Version 1.9.6.2
 - Fixed a bug in AbstractMaileonService, which could create a faulty query string
