--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-Date 2023-06-30
+Date 2023-06-27
+Version 1.9.9
+- removing utf8_encode function calls deprecated in PHP 8.2
+
+Date 2023-06-23
 Version 1.9.8
 - Added method to retrieve thumbnails of CMS2 mailings
 
