--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Date 2024-04-04
+Version 1.9.10
+- Added get account information method
+- Fixed updateContact method src param
+
 Date 2023-06-27
 Version 1.9.9
 - removing utf8_encode function calls deprecated in PHP 8.2
