--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Date 2024-08-27
+Version 1.9.14
+- Fixed Readme Badges
+
 Date 2024-08-26
 Version 1.9.13
 - Fixed a PHP deprecation warning for class_exists
