--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+Date 2025-06-24
+Version 1.11.2
+- Added link type to click reports
+
+Date 2025-06-20
+Version 1.11.1
+- Fixed bug on uploading zip template
+
 Date 2025-06-19
 Version 1.11.0
 - Adding method to upload Zip file as template for mailing
